--- a/menu/index.html
+++ b/menu/index.html
@@ -46,7 +46,7 @@
 <body>
 <!-- inizio navbar con hamburger -->
     <nav>
-        <ul class="menu1" id="hamburger">
+        <ul class="menu1" id="hamburger" data-options="scroll_to_content:false">
             <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
