--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -52,7 +52,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns extra-space">
-            <h1 id="ttitle">Tavolo riservato. Grazie</h1>
+            <h1 id="ttitle">Tavolo Riservato. Grazie</h1>
             <br>
         </div>
     </header>
