better element positioning

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -67,6 +67,8 @@
                 <input tabindex="5" id="from2" type="text">
             </label>
         </div>
+        <div class="small-12 columns end extra-space-hero" id="notesDiv3" >
+        </div>
         <div class="small-12 columns" id="innerNotesDiv1" >
         </div>
         <div class="small-12 columns" id="innerNotesDiv2" >
