--- a/menu/index.html
+++ b/menu/index.html
@@ -325,10 +325,9 @@
                                 <p>Cantucci artigianali serviti con vino di visciole</p>
                             </li> -->
                         </ul>
-                        <br>
                     </div>
                     <div class="title-divider">
-                        <p class="">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br><br>I prodotti contengono allergeni: chiedi al personale.</p>
+                        <p>I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br><br>I prodotti contengono allergeni: chiedi al personale.</p>
                         <br>
                     </div>
                 </div>
