--- a/menu/index.html
+++ b/menu/index.html
@@ -103,32 +103,32 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
-                            <p>Serviti con salsa piccante <br>
+                            <p>Serviti con salsa piccante
                             <small>Contiene: Glutine, Uova, Latte</small></p>
                         </li>
                         <li>
                             <h3>Olive all'Ascolana <span class="price">5,5</span></h3>
-                            <p>Il più tipico street food marchigiano <br>
+                            <p>Il più tipico street food marchigiano
                             <small>Contiene: Glutine, Uova, Latte, Sedano</small></p>
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte <span class="price">5,9</span></h3>
-                            <p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa <br>
+                            <p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa
                             <small>Contiene: Glutine, Uova, Latte</small></p>
                         </li>
                         <li>
                             <h3>Cipolle Rosse <span class="price">4,9</span></h3>
-                            <p>Cipolla rossa in tempura <br>
+                            <p>Cipolla rossa in tempura
                             <small>Contiene: Glutine, Latte, Crostacei</small></p>
                         </li>
                         <li>
                             <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
-                            <p>Peperoncini ripieni di robiola avvolti nella pancetta <br>
+                            <p>Peperoncini ripieni di robiola avvolti nella pancetta
                             <small>Contiene: Anidride Solforosa e Solfiti, Latte</small></p>
                         </li>
                         <li>
                             <h3>Alette di Pollo <span class="price">5,5</span></h3>
-                            <p>A scelta fra leggermente piccanti o piccanti <br>
+                            <p>A scelta fra leggermente piccanti o piccanti
                             <small>Contiene: Glutine, Uova, Latte</small></p>
                         </li>
                        <li>
@@ -137,7 +137,7 @@
                         </li>
                         <li>
                             <h3>Falafel <span class="price">5,5</span></h3>
-                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa <br>
+                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa
                             <small>Contiene: Glutine, Sedano, Senape</small></p>
                         </li>
                         <li>
@@ -152,7 +152,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Mini Burger e Patatine <span class="price">7,9</span></h3>
-                            <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto <br>
+                            <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                     </ul>
@@ -160,31 +160,37 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger Classici<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
+                    <h2 class="subheader">Hamburger Classici<br>
+                    <small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit<br>
+                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>New York <span class="price">10,5 / doppio 14,5</span></h3>
-                            <p>Manzo, cheddar, cipolla caramellata, insalata<br>
+                            <p>Manzo, cheddar, cipolla caramellata, insalata
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li>
+                        <li>
+                            <h3>Diablo <span class="price">10,5 / doppio 14,5</span></h3>
+                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Diablo <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante<br>
+                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Pollo <span class="price">10,9 / doppio 14,9</span></h3>
-                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt<br>
+                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Pulled Pork <span class="price">11,9</span></h3>
-                            <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante<br>
+                            <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante
                             <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Latte, Senape, Uova</small></p>
                         </li>
                     </ul>
@@ -196,52 +202,52 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <!-- <li>
                             <h3>Autunno <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, scamorza affumicata, crema di funghi, speck croccante<br>
+                            <p>Manzo, scamorza affumicata, crema di funghi, speck croccante
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
                         <!-- <li>
                             <h3>Inverno <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate<br>
+                            <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
                         <!-- <li>
                             <h3>Primavera <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
+                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
                         <!-- <li>
                             <h3>Deciso <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
+                            <p>Manzo, gorgonzola, guanciale, pomodorini confit
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>  -->
                         <!-- <li>
                             <h3>Fave e Pecorino <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
+                            <p>Manzo, pecorino vallesina, guanciale, fave in porchetta
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>  -->
                         <!-- <li>
                             <h3>Mantovano <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante<br>
+                            <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                         </li> -->
                         <li>
                             <h3>Estivo <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli <br>
+                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Carbonara <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe<br>
+                            <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Greco <span class="price">10,5 / doppio 14,5</span></h3>
-                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki<br>
+                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Norma <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, crema di melanzane e basilico, pomodorini confit, ricotta salata.<br>
+                            <p>Manzo, crema di melanzane e basilico, pomodorini confit, ricotta salata.
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                     </ul>
@@ -253,12 +259,12 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli <span class="price">9,5</span></h3>
-                            <p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria<br>
+                            <p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria
                             <small>Contiene: Glutine, Latte, Soia, Uova</small></p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa <span class="price">9,5</span></h3>
-                            <p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele<br>
+                            <p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele
                             <small>Contiene: Glutine, Latte, Senape, Uova</small></p>
                         </li>
                     </ul>
@@ -270,7 +276,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine <span class="price">13,9</span></h3>
-                            <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte<br>
+                            <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte
                             <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></p>
                         </li>
                         <li>
@@ -283,41 +289,41 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
-                    <div class="title-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+                    <div class="">
+                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Crumble <span class="price">5</span></h3>
-                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente <br>
+                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente
                                 <small>Contiene: Latte, Uova</small></p>
                             </li>
                             <!-- <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
-                                <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato<br>
+                                <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato
                                 <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li> -->
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
-                                <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula<br>
+                                <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula
                                 <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con crema chantilly<br>
+                                <p>Brownie con nocciole. Servito con crema chantilly
                                 <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Cremoso ai Tre Cioccolati<span class="price">5</span></h3>
-                                <p>Cremoso al cioccolato fondente, al latte e bianco<br>
+                                <p>Cremoso al cioccolato fondente, al latte e bianco
                                 <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
                             <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
-                                <p>Tiramisù con mascarpone artigianale alla birra stout<br>
+                                <p>Tiramisù con mascarpone artigianale alla birra stout
                                 <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li> -->
 			                <!-- <li>
                                 <h3>Whoop<span class="price">5</span></h3>
-                                <p>Morbido biscotto al cioccolato ripieno di burro di arachidi<br>
+                                <p>Morbido biscotto al cioccolato ripieno di burro di arachidi
                                 <small>Contiene: Arachidi, Glutine, Latte, Uova</small></p>
                             </li> -->
                             <!-- <li>
@@ -327,7 +333,8 @@
                         </ul>
                     </div>
                     <div class="title-divider">
-                        <p>I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br><br>I prodotti contengono allergeni: chiedi al personale.</p>
+                        <p>I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche.</p>
+                        <p>I prodotti contengono allergeni: chiedi al personale.</p>
                         <br>
                     </div>
                 </div>
