--- a/menu/index.html
+++ b/menu/index.html
@@ -71,8 +71,8 @@
         </div>
     </div>
 <!-- inizio tabbar switch-->
-    <div class="row">
-        <div class="medium-12 large-12 small-12 columns extra-space-hero">
+    <div class="row" id="menupage-text">
+        <div class="medium-12 large-12 small-12 columns">
             <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
                 <li class="tab-title active" role="presentational">
                     <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
