--- a/menu/index.html
+++ b/menu/index.html
@@ -89,6 +89,9 @@
                 <li class="tab-title" role="presentational">
                     <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
                 </li>
+                <li class="tab-title" role="presentational">
+                    <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -607,29 +610,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Drinks</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Spritz <span class="price">5,5</span></h3>
-                            <p>Aperol, Campari</p>
-                        </li>
-                        <li>
-                            <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
-                            <p>Aromatico. Servito con acqua tonica J. Gasco</p>
-                        </li>
-                        <li>
-                            <h3>Gin Tonic Silverback <span class="price">8</span></h3>
-                            <p>London Gin. Servito con acqua tonica J. Gasco</p>
-                        </li>
-                        <li>
-                            <h3>Gin Tonic Puro <span class="price">8</span></h3>
-                            <p>Morbido. Servito con acqua tonica J. Gasco</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </section>
 <!-- vino fine -->
 <!-- Bevande -->
@@ -752,6 +732,37 @@
             </div>
         </section>
 <!-- Liquori fine -->
+<!-- vino -->
+        <section class="content" role="tabpanel" aria-hidden="false" id="drinks">
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Drinks</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Spritz <span class="price">5,5</span></h3>
+                            <p>Aperol, Campari</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
+                            <p>Aromatico. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Silverback <span class="price">8</span></h3>
+                            <p>London Gin. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Puro <span class="price">8</span></h3>
+                            <p>Morbido. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                        <li>
+                            <h3>Americano <span class="price">7</span></h3>
+                            <p>Vermut rosso, bitter Campari, soda</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+<!-- drinks fine -->
 <!-- inizio tabbar switch-->
         <div class="row">
             <div class="medium-12 large-12 small-12 columns extra-space-hero">
@@ -770,6 +781,9 @@
                     </li>
                     <li class="tab-title" role="presentational">
                         <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                    <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
                     </li>
                 </ul>
             </div>
