--- a/menu/index.html
+++ b/menu/index.html
@@ -758,6 +758,10 @@
                             <h3>Americano <span class="price">7</span></h3>
                             <p>Vermut rosso, bitter Campari, soda</p>
                         </li>
+                        <li>
+                            <h3>Americano <span class="price">8.5</span></h3>
+                            <p>Vermut rosso, bitter Campari, gin Puro</p>
+                        </li>
                     </ul>
                 </div>
             </div>
