--- a/menu/index.html
+++ b/menu/index.html
@@ -605,7 +605,7 @@
                         </li>
                     </ul>
                     <div class="title-divider">
-                        <p class="">I vini contengono Anidride Solforosa e Solfiti</p>
+                        <p>I vini contengono Anidride Solforosa e Solfiti</p>
                         <br>
                     </div>
                 </div>
@@ -759,7 +759,7 @@
                             <p>Vermut rosso, bitter Campari, soda</p>
                         </li>
                         <li>
-                            <h3>Americano <span class="price">8.5</span></h3>
+                            <h3>Negroni <span class="price">8.5</span></h3>
                             <p>Vermut rosso, bitter Campari, gin Puro</p>
                         </li>
                     </ul>
