--- a/menu/index.html
+++ b/menu/index.html
@@ -518,8 +518,8 @@
                     <h2 class="subheader">Vino in Caraffa</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Rosso Piceno Doc Biologico<span class="price">Quarto 3 / Litro 9</span></h3>
-                            <p><em>Cantina Collevite</em></p>
+                            <h3>Rosso Piceno Doc<span class="price">Quarto 3 / Litro 9</span></h3>
+                            <p>Vino Biologico<br><em>Cantina Collevite</em></p>
                         </li>
                         <!-- <li>
                             <h3>Novis Lacrima<span class="price">Quarto 3 / Litro 8</span></h3>
