--- a/menu/index.html
+++ b/menu/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/menu.jpg"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -767,35 +767,35 @@
             </div>
         </section>
 <!-- drinks fine -->
-<!-- inizio tabbar switch-->
-        <div class="row">
-            <div class="medium-12 large-12 small-12 columns extra-space-hero">
-                <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
-                    <li class="tab-title active" role="presentational">
-                        <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
-                    </li>
-                    <li class="tab-title" role="presentational">
-                        <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
-                    </li>
-                    <li class="tab-title" role="presentational">
-                        <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
-                    </li>
-                    <li class="tab-title" role="presentational">
-                        <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
-                    </li>
-                    <li class="tab-title" role="presentational">
-                        <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
-                    </li>
-                    <li class="tab-title" role="presentational">
-                    <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="extra-space-hero"><br></div>
-<!-- fine tabbar switch-->
     </div>
 <!-- tab fine -->
+<!-- inizio tabbar switch-->
+    <div class="row" id="menupage-text">
+        <div class="medium-12 large-12 small-12 columns extra-space-hero">
+            <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
+                <li class="tab-title active" role="presentational">
+                    <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
+                </li>
+                <li class="tab-title" role="presentational">
+                    <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
+                </li>
+                <li class="tab-title" role="presentational">
+                    <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
+                </li>
+                <li class="tab-title" role="presentational">
+                    <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
+                </li>
+                <li class="tab-title" role="presentational">
+                    <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
+                </li>
+                <li class="tab-title" role="presentational">
+                <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="extra-space-hero"><br></div>
+<!-- fine tabbar switch-->
 <!-- inizio footer -->
 	<footer class="panel-footer">
 		<div class="row">
