--- a/_old_file/eventi/beerstrot-birreria.html
+++ b/_old_file/eventi/beerstrot-birreria.html
@@ -183,15 +183,24 @@
                             </div>
                        	</div>
                  	</li> -->
-                    <li>
-                        <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
-                        <div class="row">
-                            <div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
-                            </div>
-                        </div>
-                    </li>
+                    <!-- <li>
+    <h4 class="subheader">Orari</h4>
+    <meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
+    <div class="row">
+        <div class="large-12 medium-12 small-12 columns">
+            <p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
+        </div>
+    </div>
+</li> -->
+<li>
+    <h4 class="subheader">Orari</h4>
+    <meta itemprop="openingHours" content="Mo, Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
+    <div class="row">
+        <div class="large-12 medium-12 small-12 columns">
+            <p><strong>Aperto dal Martedì alla Domenica</strong><br>Dalle 19:00 alle 23:00</p>
+        </div>
+    </div>
+</li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
 		                <p>
