--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
-				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p>
+				<p>Siamo aperti dal Martedì alla Domenica anche all'interno.</p><!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
+				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p> -->
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
@@ -102,20 +102,20 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
-				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
-				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
+				<p><strong>Aperto dal Martedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
+				<!-- <p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p> -->
 				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
 				<span class="hide-for-small"><h2>Asporto</h2></span>
-				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
-				<p style="margin-bottom: 0px;" >Nota bene:</p>
+				<p><strong>Aperto dal Martedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
+				<!-- <p style="margin-bottom: 0px;" >Nota bene:</p>
 				<ul class="disc">
 					<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
 					<li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
-				</ul>
+				</ul> -->
 				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071 8853384</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
@@ -203,15 +203,24 @@
                             </div>
                        	</div>
                  	</li> -->
-                    <li>
-                        <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
-                        <div class="row">
-                            <div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
-                            </div>
-                        </div>
-                    </li>
+                    <!-- <li>
+					    <h4 class="subheader">Orari</h4>
+					    <meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
+					    <div class="row">
+					        <div class="large-12 medium-12 small-12 columns">
+					            <p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
+					        </div>
+					    </div>
+					</li> -->
+					<li>
+					    <h4 class="subheader">Orari</h4>
+					    <meta itemprop="openingHours" content="Mo, Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
+					    <div class="row">
+					        <div class="large-12 medium-12 small-12 columns">
+					            <p><strong>Aperto dal Martedì alla Domenica</strong><br>Dalle 19:00 alle 23:00</p>
+					        </div>
+					    </div>
+					</li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
 		                <p>
