--- a/_old_file/file_scartati_prenota/index_homePage_old.html
+++ b/_old_file/file_scartati_prenota/index_homePage_old.html
@@ -278,7 +278,7 @@
 </li> -->
 <li>
     <h4 class="subheader">Orari</h4>
-    <meta itemprop="openingHours" content="Mo, Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
+    <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
     <div class="row">
         <div class="large-12 medium-12 small-12 columns">
             <p><strong>Aperto dal Martedì alla Domenica</strong><br>Dalle 19:00 alle 23:00</p>
