--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<p>Siamo aperti dal Martedì alla Domenica anche all'interno.</p><!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p> -->
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
-				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
+				<p>All'esterno è consentito fumare solo nell'area preposta lontano dai tavoli.</p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 		</div>
