--- a/asporto/index.html
+++ b/asporto/index.html
@@ -363,8 +363,16 @@
 						<meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
 						<div class="row">
 							<div class="large-12 medium-12 small-12 columns">
-								<p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
-							</div>
+					        	<ul class="no-bullet">
+					    			<li class="testo-orari">Lunedì 		<span class="orari">Chiuso</span></li>
+					    			<li class="testo-orari">Martedì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Mercoledì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Giovedì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Venerdì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Sabato 		<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Domenica 	<span class="orari">19 - 22</span></li>
+					    		</ul>
+					        </div>
 						</div>
 					</li>
 					<li>
