--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it"/>
-	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+	<link rel="stylesheet" href="css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -217,7 +217,15 @@
 					    <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
 					    <div class="row">
 					        <div class="large-12 medium-12 small-12 columns">
-					            <p><strong>Aperto dal Martedì alla Domenica</strong><br>Dalle 19:00 alle 23:00</p>
+					        	<ul class="no-bullet">
+					    			<li class="testo-orari">Lunedì 		<span class="orari">Chiuso</span></li>
+					    			<li class="testo-orari">Martedì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Mercoledì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Giovedì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Venerdì 	<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Sabato 		<span class="orari">19 - 22</span></li>
+					    			<li class="testo-orari">Domenica 	<span class="orari">19 - 22</span></li>
+					    		</ul>
 					        </div>
 					    </div>
 					</li>
