--- a/asporto/index.html
+++ b/asporto/index.html
@@ -345,36 +345,27 @@
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 					<li>
-						<h4 class="subheader">Contatti</h4>
-						<p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-					</li>
-					<!-- <li>
-						<h4 class="subheader">Orari</h4>
-						<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
-						<div class="row">
-							<div class="large-12 medium-12 small-12 columns">
-								<p><strong>Aperto dal Giovedì alla Domenica.</strong><br>Dalle 19:00 alle 23:00</p>
-							</div>
-						</div>
-					</li> -->
-					<li>
-						<h4 class="subheader">Orari</h4>
-						<meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
-						<div class="row">
-							<div class="large-12 medium-12 small-12 columns">
-					        	<ul class="no-bullet">
-					    			<li class="testo-orari">Lunedì 		<span class="orari">Chiuso</span></li>
-					    			<li class="testo-orari">Martedì 	<span class="orari">19 - 22</span></li>
-					    			<li class="testo-orari">Mercoledì 	<span class="orari">19 - 22</span></li>
-					    			<li class="testo-orari">Giovedì 	<span class="orari">19 - 22</span></li>
-					    			<li class="testo-orari">Venerdì 	<span class="orari">19 - 22</span></li>
-					    			<li class="testo-orari">Sabato 		<span class="orari">19 - 22</span></li>
-					    			<li class="testo-orari">Domenica 	<span class="orari">19 - 22</span></li>
-					    		</ul>
-					        </div>
-						</div>
-					</li>
+                        <h4 class="subheader">Contatti</h4>
+                        <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                    </li>
+                    <li>
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
+                        <div class="row">
+                            <div class="large-12 medium-12 small-12 columns">
+                                <ul class="no-bullet">
+                                    <li class="testo-orari">Lunedì      <span class="orari">Chiuso</span></li>
+                                    <li class="testo-orari">Martedì     <span class="orari">19 - 23</span></li>
+                                    <li class="testo-orari">Mercoledì   <span class="orari">19 - 23</span></li>
+                                    <li class="testo-orari">Giovedì     <span class="orari">19 - 23</span></li>
+                                    <li class="testo-orari">Venerdì     <span class="orari">19 - 23</span></li>
+                                    <li class="testo-orari">Sabato      <span class="orari">19 - 23</span></li>
+                                    <li class="testo-orari">Domenica    <span class="orari">19 - 23</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
 					<li>
 						<h4 class="subheader">Dove siamo</h4>
 						<p>
