--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -203,7 +203,7 @@
                                           </tr>
                                         </tbody>
                                       </table>
-                                      <table style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
+                                      <!-- <table style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                         <tbody>
                                           <tr>
                                             <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;" align="left">
@@ -213,7 +213,7 @@
                                             </td>
                                           </tr>
                                         </tbody>
-                                      </table>
+                                      </table> -->
                                       <table style="font-family:arial,helvetica,sans-serif; background-color: #e6e6e6; margin-bottom:10%;margin-top:4%;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                         <tbody>
                                           <tr>
