update email template.
renato nuovo push vediamo se funziona

--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -220,7 +220,7 @@
                                             <td style="overflow-wrap:break-word;word-break:break-word;padding:6%;padding-bottom:16px; font-family:arial,helvetica,sans-serif;" align="left">
                                               <div>
                                                 <p style="line-height: 140%;font-size: 14.4px;">Come raggiungerci:
-                                                  <a style="text-decoration:none; color:#e00c10;" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Via Centofinestre, 20 60024 Filottrano AN
+                                                  <a style="text-decoration:none; color:#e00c10;" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Via Centofinestre, 20 - 60024 Filottrano AN
                                                   </a>
                                                 </p>
                                               </div>
