--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -124,21 +124,21 @@
                                         <p style="font-size: 16px; line-height: 140%;">&nbsp;</p>
                                         <fieldset>
                                           {% if modify %}
-                                          <legend style="font-size: 14px; line-height: 140%; margin-bottom:10px">Dettaglio prenotazione modificata</legend>
+                                          <legend style="font-size: 15px; line-height: 140%; margin-bottom:10px">Dettaglio prenotazione modificata</legend>
                                           {% else %}
-                                          <legend style="font-size: 14px; line-height: 140%; margin-bottom:10px">Dettaglio prenotazione{% if cancel or closed %} cancellata{% endif %}</legend>
+                                          <legend style="font-size: 15px; line-height: 140%; margin-bottom:10px">Dettaglio prenotazione{% if cancel or closed %} cancellata{% endif %}</legend>
                                           {% endif %}
-                                          <p style="font-size: 14.4px; line-height: 140%;">Nome: <strong>{{_name}} {{_surname}}</strong></p>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Telefono: <strong>{{_telephone or '--'}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Nome: <strong>{{_name}} {{_surname}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Telefono: <strong>{{_telephone or '--'}}</strong></p>
                                           <br>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Numero di persone: <strong>{{_quantity}}</strong></p>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Data: <strong>{{date}}</strong></p>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Orario arrivo: <strong>{{start_time}}</strong></p>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Orario in cui lasciare il tavolo: <strong>{{end_time}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Numero di persone: <strong>{{_quantity}}</strong></p>
+                                          <p style="font-size: 145x; line-height: 140%;">Data: <strong>{{date}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Orario arrivo: <strong>{{start_time}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Orario in cui lasciare il tavolo: <strong>{{end_time}}</strong></p>
                                           <br>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Note: <strong>{{note or '--'}}</strong></p>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Seggioloni: <strong>{{seggiolini}}</strong></p>
-                                          <p style="font-size: 14.4px; line-height: 140%;">Ho un cane o più: <strong>{{cani}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Note: <strong>{{note or '--'}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Seggioloni: <strong>{{seggiolini}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Ho un cane o più: <strong>{{cani}}</strong></p>
                                           <br>
                                         </fieldset>
                                         <p style="font-size: 14px; line-height: 140%;">&nbsp;</p>
