--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -132,7 +132,7 @@
                                           <p style="font-size: 15px; line-height: 140%;">Telefono: <strong>{{_telephone or '--'}}</strong></p>
                                           <br>
                                           <p style="font-size: 15px; line-height: 140%;">Numero di persone: <strong>{{_quantity}}</strong></p>
-                                          <p style="font-size: 145x; line-height: 140%;">Data: <strong>{{date}}</strong></p>
+                                          <p style="font-size: 15px; line-height: 140%;">Data: <strong>{{date}}</strong></p>
                                           <p style="font-size: 15px; line-height: 140%;">Orario arrivo: <strong>{{start_time}}</strong></p>
                                           <p style="font-size: 15px; line-height: 140%;">Orario in cui lasciare il tavolo: <strong>{{end_time}}</strong></p>
                                           <br>
