--- a/menu/index.html
+++ b/menu/index.html
@@ -281,6 +281,10 @@
                             <h3>Tagliata di Picanha<span class="price">19</span></h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
                         </li>
+                        <!-- <li>
+                            <h3>Entrec&#244;te<span class="price">19</span></h3>
+                            <p>Entrec&#244;te di Manzetta Red Hereford irlandese alla griglia. Servita su letto di rucola</p>
+                        </li> -->
                     </ul>
                 </div>
             </div>
