--- a/menu/index.html
+++ b/menu/index.html
@@ -283,7 +283,7 @@
                         </li> -->
                         <li>
                             <h3>Entrec&#244;te<span class="price">19</span></h3>
-                            <p>Entrec&#244;te di Manzetta Red Hereford irlandese alla griglia. Servita su letto di rucola</p>
+                            <p>Entrec&#244;te di Manzetta Red Hereford irlandese</p>
                         </li>
                     </ul>
                 </div>
